--- a/config/detection/mscoco_config.yaml
+++ b/config/detection/mscoco_config.yaml
@@ -8,317 +8,317 @@
   confidence_threshold : 0.8
 2:
   label : 'bicycle'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 3:
   label : 'car'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 4:
   label : 'motorcycle'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 5:
   label : 'airplane'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 6:
   label : 'bus'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 7:
   label : 'train'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 8:
   label : 'truck'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 9:
   label : 'boat'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 10:
   label : 'traffic_light'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 11:
   label : 'fire_hydrant'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 12:
   label : 'stop_sign'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 13:
   label : 'parking_meter'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 14:
   label : 'bench'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 15:
   label : 'bird'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 16:
   label : 'cat'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 17:
   label : 'dog'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 18:
   label : 'horse'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 19:
   label : 'sheep'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 20:
   label : 'cow'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 21:
   label : 'elephant'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 22:
   label : 'bear'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 23:
   label : 'zebra'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 24:
   label : 'giraffe'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 25:
   label : 'backpack'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 26:
   label : 'umbrella'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 27:
   label : 'handbag'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 28:
   label : 'tie'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 29:
   label : 'suitcase'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 30:
   label : 'frisbee'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 31:
   label : 'skis'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 32:
   label : 'snowboard'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 33:
   label : 'sports_ball'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 34:
   label : 'kite'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 35:
   label : 'baseball_bat'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 36:
   label : 'baseball_glove'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 37:
   label : 'skateboard'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 38:
   label : 'surfboard'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 39:
   label : 'tennis_racket'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 40:
   label : 'bottle'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 41:
   label : 'wine_glass'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 42:
   label : 'cup'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 43:
   label : 'fork'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 44:
   label : 'knife'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 45:
   label : 'spoon'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 46:
   label : 'bowl'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 47:
   label : 'banana'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 48:
   label : 'apple'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 49:
   label : 'sandwich'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 50:
   label : 'orange'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 51:
   label : 'broccoli'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 52:
   label : 'carrot'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 53:
   label : 'hot_dog'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 54:
   label : 'pizza'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 55:
   label : 'donut'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 56:
   label : 'cake'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 57:
   label : 'chair'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 58:
   label : 'couch'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 59:
   label : 'potted_plant'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 60:
   label : 'bed'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 61:
   label : 'dining_table'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 62:
   label : 'toilet'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 63:
   label : 'tv'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 64:
   label : 'laptop'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 65:
   label : 'mouse'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 66:
   label : 'remote'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 67:
   label : 'keyboard'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 68:
   label : 'cell_phone'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 69:
   label : 'microwave'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 70:
   label : 'oven'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 71:
   label : 'toaster'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 72:
   label : 'sink'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 73:
   label : 'refrigerator'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 74:
   label : 'book'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 75:
   label : 'clock'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 76:
   label : 'vase'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 77:
   label : 'scissors'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 78:
   label : 'teddy_bear'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 79:
   label : 'hair_drier'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
 80:
   label : 'toothbrush'
-  activated : True
-  confidence_threshold : 0.15
+  activated : False
+  confidence_threshold : 0.2
