--- a/config/detection/mscoco_config.yaml
+++ b/config/detection/mscoco_config.yaml
@@ -1,6 +1,6 @@
 0:
   label : 'background'
-  activated : True
+  activated : False
   confidence_threshold : 0.0
 1:
   label : 'person'
@@ -8,317 +8,317 @@
   confidence_threshold : 0.8
 2:
   label : 'bicycle'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 3:
   label : 'car'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 4:
   label : 'motorcycle'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 5:
   label : 'airplane'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 6:
   label : 'bus'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 7:
   label : 'train'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 8:
   label : 'truck'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 9:
   label : 'boat'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 10:
   label : 'traffic_light'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 11:
   label : 'fire_hydrant'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 12:
   label : 'stop_sign'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 13:
   label : 'parking_meter'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 14:
   label : 'bench'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 15:
   label : 'bird'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 16:
   label : 'cat'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 17:
   label : 'dog'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 18:
   label : 'horse'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 19:
   label : 'sheep'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 20:
   label : 'cow'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 21:
   label : 'elephant'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 22:
   label : 'bear'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 23:
   label : 'zebra'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 24:
   label : 'giraffe'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 25:
   label : 'backpack'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 26:
   label : 'umbrella'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 27:
   label : 'handbag'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 28:
   label : 'tie'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 29:
   label : 'suitcase'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 30:
   label : 'frisbee'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 31:
   label : 'skis'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 32:
   label : 'snowboard'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 33:
   label : 'sports_ball'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 34:
   label : 'kite'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 35:
   label : 'baseball_bat'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 36:
   label : 'baseball_glove'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 37:
   label : 'skateboard'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 38:
   label : 'surfboard'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 39:
   label : 'tennis_racket'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 40:
   label : 'bottle'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 41:
   label : 'wine_glass'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 42:
   label : 'cup'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 43:
   label : 'fork'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 44:
   label : 'knife'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 45:
   label : 'spoon'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 46:
   label : 'bowl'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 47:
   label : 'banana'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 48:
   label : 'apple'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 49:
   label : 'sandwich'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 50:
   label : 'orange'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 51:
   label : 'broccoli'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 52:
   label : 'carrot'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 53:
   label : 'hot_dog'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 54:
   label : 'pizza'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 55:
   label : 'donut'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 56:
   label : 'cake'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 57:
   label : 'chair'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 58:
   label : 'couch'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 59:
   label : 'potted_plant'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 60:
   label : 'bed'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 61:
   label : 'dining_table'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 62:
   label : 'toilet'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 63:
   label : 'tv'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 64:
   label : 'laptop'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 65:
   label : 'mouse'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 66:
   label : 'remote'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 67:
   label : 'keyboard'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 68:
   label : 'cell_phone'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 69:
   label : 'microwave'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 70:
   label : 'oven'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 71:
   label : 'toaster'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 72:
   label : 'sink'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 73:
   label : 'refrigerator'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 74:
   label : 'book'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 75:
   label : 'clock'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 76:
   label : 'vase'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 77:
   label : 'scissors'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 78:
   label : 'teddy_bear'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 79:
   label : 'hair_drier'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
 80:
   label : 'toothbrush'
-  activated : True
+  activated : False
   confidence_threshold : 0.1
