robustify head pose estimation by adding more guess

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   std_msgs
   uwds3_msgs
+  uwds3
 )
 
 ## System dependencies are found with CMake's conventions
