--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,7 @@
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>uwds3_msgs</depend>
+  <depend>uwds3</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
