--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy>=1.11.1
-scipy>=0.14
+numpy>=1.11.0
+scipy>=0.1.2
 uuid
 argparse
 scikit-image
@@ -7,6 +7,7 @@ scikit-learn
 matplotlib
 dlib
 face-alignment
+future
 torch>=1.1
 opencv-python
 opencv-contrib-python
