--- a/config/detection/mscoco_config.yaml
+++ b/config/detection/mscoco_config.yaml
@@ -8,317 +8,317 @@
   confidence_threshold : 0.8
 2:
   label : 'bicycle'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 3:
   label : 'car'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 4:
   label : 'motorcycle'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 5:
   label : 'airplane'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 6:
   label : 'bus'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 7:
   label : 'train'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 8:
   label : 'truck'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 9:
   label : 'boat'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 10:
   label : 'traffic_light'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 11:
   label : 'fire_hydrant'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 12:
   label : 'stop_sign'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 13:
   label : 'parking_meter'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 14:
   label : 'bench'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 15:
   label : 'bird'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 16:
   label : 'cat'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 17:
   label : 'dog'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 18:
   label : 'horse'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 19:
   label : 'sheep'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 20:
   label : 'cow'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 21:
   label : 'elephant'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 22:
   label : 'bear'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 23:
   label : 'zebra'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 24:
   label : 'giraffe'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 25:
   label : 'backpack'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 26:
   label : 'umbrella'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 27:
   label : 'handbag'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 28:
   label : 'tie'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 29:
   label : 'suitcase'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 30:
   label : 'frisbee'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 31:
   label : 'skis'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 32:
   label : 'snowboard'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 33:
   label : 'sports_ball'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 34:
   label : 'kite'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 35:
   label : 'baseball_bat'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 36:
   label : 'baseball_glove'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 37:
   label : 'skateboard'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 38:
   label : 'surfboard'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 39:
   label : 'tennis_racket'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 40:
   label : 'bottle'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 41:
   label : 'wine_glass'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 42:
   label : 'cup'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 43:
   label : 'fork'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 44:
   label : 'knife'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 45:
   label : 'spoon'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 46:
   label : 'bowl'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 47:
   label : 'banana'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.4
 48:
   label : 'apple'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 49:
   label : 'sandwich'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 50:
   label : 'orange'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 51:
   label : 'broccoli'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 52:
   label : 'carrot'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 53:
   label : 'hot_dog'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 54:
   label : 'pizza'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 55:
   label : 'donut'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 56:
   label : 'cake'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 57:
   label : 'chair'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 58:
   label : 'couch'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 59:
   label : 'potted_plant'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 60:
   label : 'bed'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 61:
   label : 'dining_table'
   activated : False
-  confidence_threshold : 0.18
+  confidence_threshold : 0.25
 62:
   label : 'toilet'
   activated : False
-  confidence_threshold : 0.18
+  confidence_threshold : 0.25
 63:
   label : 'tv'
   activated : False
-  confidence_threshold : 0.18
+  confidence_threshold : 0.25
 64:
   label : 'laptop'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 65:
   label : 'mouse'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 66:
   label : 'remote'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 67:
   label : 'keyboard'
   activated : False
-  confidence_threshold : 0.18
+  confidence_threshold : 0.25
 68:
   label : 'cell_phone'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 69:
   label : 'microwave'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 70:
   label : 'oven'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 71:
   label : 'toaster'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 72:
   label : 'sink'
   activated : False
-  confidence_threshold : 0.18
+  confidence_threshold : 0.25
 73:
   label : 'refrigerator'
   activated : False
-  confidence_threshold : 0.18
+  confidence_threshold : 0.25
 74:
   label : 'book'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 75:
   label : 'clock'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 76:
   label : 'vase'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 77:
   label : 'scissors'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 78:
   label : 'teddy_bear'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 79:
   label : 'hair_drier'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
 80:
   label : 'toothbrush'
-  activated : False
-  confidence_threshold : 0.18
+  activated : True
+  confidence_threshold : 0.25
